Fix(forum): Modification du code pour que la div réponse soit alignée horizontalement avec la div réaction des commentaires

--- a/plugins/mel_forum/skins/mel_elastic/mel_forum.css
+++ b/plugins/mel_forum/skins/mel_elastic/mel_forum.css
@@ -412,7 +412,7 @@
   /* Pour aligner les éléments horizontalement */
   align-items: center;
   /* Aligne les éléments verticalement au centre */
-  margin-left: 40px;
+  margin-left: 50px;
   /* Ajuste la marge pour s'aligner avec les autres éléments */
 }
 .task-forum .forum-comment-response .icon::before {
